[project]
name = "tk-devtools"
version = "0.1.0"
description = "Your Tkinter devtools package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Chris", email="chrisdel.tech9@email.com" }
]

dependencies = []

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devtools*"]
exclude = ["tests*", "main*"]
