[project]
name = "devtools"
version = "0.1.0"
description = "Tkinter development tools"
requires-python = ">=3.7"
authors = [
  { name="Chris", email="chrisdel.tech9@email.com" }
]

dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["devtools*"]